Added CSV and files in Beginning_Python

--- a/Beginning_Python.ipynb
+++ b/Beginning_Python.ipynb
@@ -1121,6 +1121,269 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### File manipulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We're going to erase demofile.txt.\n",
+      "If you don't want that, hit CTRL C (^C).\n",
+      "If you do want that, hit RETURN.\n",
+      "Opening the file...\n",
+      "Truncating the file. Goodbye!\n",
+      "Now I'm going to ask you for three lines.\n",
+      "I'm going to write these to the file.\n",
+      "And finally, we close it.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from sys import argv\n",
+    "\n",
+    "# script, filename = argv\n",
+    "\n",
+    "filename = 'demofile.txt'\n",
+    "\n",
+    "print(f\"We're going to erase {filename}.\")\n",
+    "print(\"If you don't want that, hit CTRL C (^C).\")\n",
+    "print(\"If you do want that, hit RETURN.\")\n",
+    "\n",
+    "input(\"?\")\n",
+    "\n",
+    "print(\"Opening the file...\")\n",
+    "target = open(filename, 'w')\n",
+    "\n",
+    "print(\"Truncating the file. Goodbye!\")\n",
+    "target.truncate()\n",
+    "\n",
+    "print(\"Now I'm going to ask you for three lines.\")\n",
+    "\n",
+    "line1 = input(\"line 1: \")\n",
+    "line2 = input(\"line 2: \")\n",
+    "line3 = input(\"line 3: \")\n",
+    "\n",
+    "print(\"I'm going to write these to the file.\")\n",
+    "\n",
+    "target.write(line1)\n",
+    "target.write(\"\\n\")\n",
+    "target.write(line2)\n",
+    "target.write(\"\\n\")\n",
+    "target.write(line3)\n",
+    "target.write(\"\\n\")\n",
+    "\n",
+    "print(\"And finally, we close it.\")\n",
+    "target.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying from demofile.txt to demofile2.txt\n",
+      "The input file is 12 bytes long\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'exists' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\skyfree\\Documents\\GitHubClones\\Python_Practice\\Beginning_Python.ipynb Cell 48\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#Y102sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m indata \u001b[39m=\u001b[39m in_file\u001b[39m.\u001b[39mread()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#Y102sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe input file is \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(indata)\u001b[39m}\u001b[39;00m\u001b[39m bytes long\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#Y102sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mDoes the output file exist? \u001b[39m\u001b[39m{\u001b[39;00mexists(to_file)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#Y102sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mReady, hit RETURN to continue, CTRL C to abort.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#Y102sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39minput\u001b[39m()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'exists' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# from sys import argv\n",
+    "from os.path import exists\n",
+    "\n",
+    "# script, from_file, to_file = argv\n",
+    "\n",
+    "from_file = 'demofile.txt'\n",
+    "to_file = 'demofile2.txt'\n",
+    "\n",
+    "print(f\"Copying from {from_file} to {to_file}\")\n",
+    "\n",
+    "# we could do these two on one line, how?\n",
+    "in_file = open(from_file)\n",
+    "indata = in_file.read()\n",
+    "\n",
+    "print(f\"The input file is {len(indata)} bytes long\")\n",
+    "\n",
+    "print(f\"Does the output file exist? {exists(to_file)}\")\n",
+    "print(\"Ready, hit RETURN to continue, CTRL C to abort.\")\n",
+    "input()\n",
+    "\n",
+    "out_file = open(to_file, 'w')\n",
+    "out_file.write(indata)\n",
+    "\n",
+    "print(\"Alright, all done.\")\n",
+    "\n",
+    "out_file.close()\n",
+    "in_file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CSV Functionalities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date\topen\thigh\tlow\tclose\tvolume\tunadjustedVolume\tchange\tchangePercent\tvwap\tlabel\tchangeOverTime\n",
+      "2018-11-27\t171.51\t174.77\t170.88\t174.24\t41387377\t41387377\t-0.38\t-0.218\t173.289\t27-Nov\t0\n",
+      "2018-11-28\t176.73\t181.29\t174.93\t180.94\t46062539\t46062539\t6.7\t3.845\t178.1889\t28-Nov\t0.038452709\n",
+      "2018-11-29\t182.66\t182.8\t177.7\t179.55\t41769992\t41769992\t-1.39\t-0.768\t179.3465\t29-Nov\t0.030475207\n",
+      "2018-11-30\t180.29\t180.33\t177.03\t178.58\t39531549\t39531549\t-0.97\t-0.54\t178.2914\t30-Nov\t0.024908173\n",
+      "2018-12-03\t184.46\t184.94\t181.21\t184.82\t40798002\t40798002\t6.24\t3.494\t182.9573\t03-Dec\t0.060720845\n",
+      "2018-12-04\t180.95\t182.3899\t176.27\t176.69\t41344282\t41344282\t-8.13\t-4.399\t178.7221\t04-Dec\t0.014061065\n",
+      "2018-12-06\t171.76\t174.78\t170.42\t174.72\t43098410\t43098410\t-1.97\t-1.115\t172.4285\t06-Dec\t0.002754821\n",
+      "2018-12-07\t173.49\t174.49\t168.3\t168.49\t42281631\t42281631\t-6.23\t-3.566\t170.4207\t07-Dec\t-0.033000459\n",
+      "2018-12-10\t165\t170.09\t163.33\t169.6\t62025994\t62025994\t1.11\t0.659\t166.9123\t10-Dec\t-0.026629936\n",
+      "2018-12-11\t171.66\t171.79\t167\t168.63\t47281665\t47281665\t-0.97\t-0.572\t168.9359\t11-Dec\t-0.03219697\n",
+      "2018-12-12\t170.4\t171.92\t169.02\t169.1\t35627674\t35627674\t0.47\t0.279\t170.3124\t12-Dec\t-0.029499541\n",
+      "2018-12-13\t170.49\t172.57\t169.55\t170.95\t31897827\t31897827\t1.85\t1.094\t170.9691\t13-Dec\t-0.018882002\n",
+      "2018-12-14\t169\t169.08\t165.28\t165.48\t40703710\t40703710\t-5.47\t-3.2\t166.6283\t14-Dec\t-0.050275482\n",
+      "2018-12-17\t165.45\t168.35\t162.73\t163.94\t44287922\t44287922\t-1.54\t-0.931\t165.495\t17-Dec\t-0.059113866\n",
+      "2018-12-18\t165.38\t167.53\t164.39\t166.07\t33841518\t33841518\t2.13\t1.299\t165.89\t18-Dec\t-0.046889348\n",
+      "2018-12-19\t166\t167.45\t159.09\t160.89\t49047297\t49047297\t-5.18\t-3.119\t163.2712\t19-Dec\t-0.076618457\n",
+      "2018-12-20\t160.4\t162.11\t155.3\t156.83\t64772960\t64772960\t-4.06\t-2.523\t158.3974\t20-Dec\t-0.099919651\n",
+      "2018-12-21\t156.86\t158.16\t149.63\t150.73\t95744384\t95744384\t-6.1\t-3.89\t153.0778\t21-Dec\t-0.134928834\n",
+      "2018-12-24\t148.15\t151.55\t146.59\t146.83\t37169232\t37169232\t-3.9\t-2.587\t148.759\t24-Dec\t-0.157311754\n",
+      "2018-12-26\t148.3\t157.23\t146.72\t157.17\t58582544\t58582544\t10.34\t7.042\t151.4801\t26-Dec\t-0.09796832\n",
+      "Opened at $171.51 on 2018-11-27\n",
+      "Opened at $176.73 on 2018-11-28\n",
+      "Opened at $182.66 on 2018-11-29\n",
+      "Opened at $180.29 on 2018-11-30\n",
+      "Opened at $184.46 on 2018-12-03\n",
+      "Opened at $180.95 on 2018-12-04\n",
+      "Opened at $171.76 on 2018-12-06\n",
+      "Opened at $173.49 on 2018-12-07\n",
+      "Opened at $165 on 2018-12-10\n",
+      "Opened at $171.66 on 2018-12-11\n",
+      "Opened at $170.4 on 2018-12-12\n",
+      "Opened at $170.49 on 2018-12-13\n",
+      "Opened at $169 on 2018-12-14\n",
+      "Opened at $165.45 on 2018-12-17\n",
+      "Opened at $165.38 on 2018-12-18\n",
+      "Opened at $166 on 2018-12-19\n",
+      "Opened at $160.4 on 2018-12-20\n",
+      "Opened at $156.86 on 2018-12-21\n",
+      "Opened at $148.15 on 2018-12-24\n",
+      "Opened at $148.3 on 2018-12-26\n",
+      "{'date': '2018-11-27', 'open': '171.51', 'high': '174.77', 'low': '170.88', 'close': '174.24'}\n",
+      "{'date': '2018-11-28', 'open': '176.73', 'high': '181.29', 'low': '174.93', 'close': '180.94'}\n",
+      "{'date': '2018-11-29', 'open': '182.66', 'high': '182.8', 'low': '177.7', 'close': '179.55'}\n",
+      "{'date': '2018-11-30', 'open': '180.29', 'high': '180.33', 'low': '177.03', 'close': '178.58'}\n",
+      "{'date': '2018-12-03', 'open': '184.46', 'high': '184.94', 'low': '181.21', 'close': '184.82'}\n",
+      "Performance(date='2018-11-27', open='171.51', high='174.77', low='170.88', close='174.24')\n",
+      "Performance(date='2018-11-28', open='176.73', high='181.29', low='174.93', close='180.94')\n",
+      "Performance(date='2018-11-29', open='182.66', high='182.8', low='177.7', close='179.55')\n",
+      "Performance(date='2018-11-30', open='180.29', high='180.33', low='177.03', close='178.58')\n",
+      "Performance(date='2018-12-03', open='184.46', high='184.94', low='181.21', close='184.82')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The CSV reader returns an iterable\n",
+    "#  which returns a list of field values.\n",
+    "#  By default, these will always be strings.\n",
+    "\n",
+    "import csv  # The CSV module\n",
+    "\n",
+    "with open('chart.csv', newline='') as file:\n",
+    "    csv_reader = csv.reader(file)\n",
+    "    for row in csv_reader:\n",
+    "        print(*row, sep='\\t')   # Unpack the fields, and separate with tabs\n",
+    "\n",
+    "# For the CSV with headers,\n",
+    "#  we can omit the field names definition and let the reader use the first row:\n",
+    "\n",
+    "with open('chart.csv', newline='') as file:\n",
+    "    csv_reader = csv.DictReader(file)\n",
+    "    for row in csv_reader:\n",
+    "         print('Opened at $', row['open'], ' on ', row['date'], sep='')\n",
+    "\n",
+    "# The DictReader constructor takes an iterable (i.e. a file object) \n",
+    "# and an optional list of field names. \n",
+    "# If omitted, the DictReader will assume the first row contains the field definition.\n",
+    "with open('chart_no_header.csv', newline='') as file:\n",
+    "    # This CSV has no header, so we must define the field names\n",
+    "    csv_reader = csv.DictReader(file, ['date', 'open', 'high', 'low', 'close'])\n",
+    "    for row in csv_reader:\n",
+    "        print(row)\n",
+    "\n",
+    "# Namedtuples are useful to store this type of information.\n",
+    "# Having this data structure allows us to accurately and explicitly describe its content. \n",
+    "\n",
+    "from collections import namedtuple\n",
+    "\n",
+    "Performance = namedtuple('Performance', ['date', 'open', 'high', 'low', 'close'])\n",
+    "\n",
+    "with open('chart_no_header.csv', newline='') as file:\n",
+    "    csv_reader = csv.reader(file)\n",
+    "    for row in csv_reader:\n",
+    "        performance = Performance(*row)\n",
+    "        print(performance)\n",
+    "\n",
+    "    #Why does this not like going through the second for loop?\n",
+    "    #The syntax is fine, since commenting out the first loop, program runs for 2nd loop\n",
+    "    #But having the first loop means second loop is not accessed?\n",
+    "    for row in csv_reader:\n",
+    "        performance = Performance(*row)\n",
+    "        report = f'Closed at ${performance.close} on {performance.date}'\n",
+    "        print(report)\n",
+    "\n",
+    "# The CSV writer operates on open files\n",
+    "\n",
+    "# Rows can also be written in bulk using the .writerows() method.\n",
+    "with open('writer.csv', 'w', newline='') as file:\n",
+    "    writer = csv.writer(file)  # Create the writer\n",
+    "    writer.writerow(['City', 'Province'])  # First row\n",
+    "    writer.writerow(['Toronto', 'ON'])\n",
+    "    writer.writerow(['Montreal', 'QC'])\n",
+    "\n",
+    "# The DictWriter provides the ability to write dictionaries to CSV files.\n",
+    "# we have to explicitly tell the writer to include headers using the writeheader() method:\n",
+    "\n",
+    "cities = [\n",
+    "    {'city': 'Toronto', 'province': 'ON'},\n",
+    "    {'city': 'Montreal', 'province': 'QC'}\n",
+    "]\n",
+    "\n",
+    "with open('cities.csv', 'w', newline='') as file:\n",
+    "    writer = csv.DictWriter(file, ['city', 'province'])\n",
+    "    writer.writeheader()  # Write the header\n",
+    "    writer.writerows(cities)  # Write all the rows at once"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Example of a plot"
    ]
   },
