Updated with more scripts

--- a/Beginning_Python.ipynb
+++ b/Beginning_Python.ipynb
@@ -628,7 +628,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\skyfree\\Documents\\GitHubClones\\Python_Practice\\Beginning_Python.ipynb Cell 28\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#X36sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#X36sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m source \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#X36sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m \u001b[39massert\u001b[39;00m intersect(source, [[\u001b[39m4\u001b[39m, \u001b[39m1\u001b[39m], [\u001b[39m6\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m4\u001b[39m], [\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m]]) \u001b[39m==\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#X36sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m \u001b[39massert\u001b[39;00m source \u001b[39m==\u001b[39m [\u001b[39m1\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m1\u001b[39m]\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "def intersect_recur(L, M, lst):\n",
     "    \"\"\" \n",
@@ -663,7 +675,29 @@
     "\n",
     "    return (lst1, lst2)\n",
     "\n",
-    "assert intersect([2, 5, 5, 7, 9, 2, 4], [1, 1, 1, 5, 8, 9, 7]) == ([5, 7, 9], [5, 7, 9])"
+    "assert intersect([2, 5, 5, 7, 9, 2, 4], [1, 1, 1, 5, 8, 9, 7]) == ([5, 7, 9], [5, 7, 9])\n",
+    "\n",
+    "## intersect_harder(source, others)\n",
+    "## that consumes source, a list of integers, and \n",
+    "## others a list of lists of integers. \n",
+    "## The function mutates source by keeping only the numbers \n",
+    "## that are also in every lists in others.\n",
+    "\n",
+    "def intersect_harder(source, others):\n",
+    "  other_len = len(others)\n",
+    "  source_copy = source.copy()\n",
+    "  for x in source_copy:\n",
+    "    keep = True\n",
+    "    for index in range(other_len):\n",
+    "      if x not in others[index]:\n",
+    "        keep = False\n",
+    "    if keep == False:\n",
+    "      source.remove(x)\n",
+    "  return\n",
+    "\n",
+    "source = [1, 4, 6, 2, 1]\n",
+    "assert intersect_harder(source, [[4, 1], [6, 9, 1, 4], [0, 2, 2, 2, 4, 2, 1]]) == None\n",
+    "assert source == [1, 4, 1]\n"
    ]
   },
   {
@@ -770,7 +804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Enforcer\n",
+    "### The Enforcer\n",
     "\n",
     "Websites often have a number of rules for passwords. These are intended to make passwords stronger, but tend to actually make them weaker!\n",
     "\n",
@@ -1121,6 +1155,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Counting Grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## grid_count(grid, target)\n",
+    "## consumes a list of list of strings grid and a string target and\n",
+    "## returns a list of two lists of integers.\n",
+    "## The first list in the return value contains the number of strings\n",
+    "## that target is a substring of in each row of grid.\n",
+    "## The second list in the return value contains the number of strings \n",
+    "## that target is a substring of in each column of grid.\n",
+    "\n",
+    "def grid_width(grid):\n",
+    "  max_so_far = 0\n",
+    "  for lst in grid:\n",
+    "    length = len(lst)\n",
+    "    if max_so_far < length:\n",
+    "      max_so_far = length\n",
+    "  return max_so_far\n",
+    "\n",
+    "def grid_count(grid, target):\n",
+    "  row_count = [0] * len(grid)\n",
+    "  \n",
+    "  index = 0\n",
+    "  for lst in grid:\n",
+    "    count = 0\n",
+    "    for string in lst:\n",
+    "      if target in string:\n",
+    "        count += 1\n",
+    "    row_count[index] = count\n",
+    "    index += 1\n",
+    "  \n",
+    "  index = 0\n",
+    "  \n",
+    "  col_count = []\n",
+    "  index = 0\n",
+    "  width = grid_width(grid)\n",
+    "  while (index < width):\n",
+    "    count = 0\n",
+    "    for lst in grid:\n",
+    "      if index < len(lst):\n",
+    "        if target in lst[index]:\n",
+    "          count += 1\n",
+    "    col_count.append(count)\n",
+    "    index += 1  \n",
+    "  \n",
+    "  return [row_count, col_count]\n",
+    "\n",
+    "assert grid_count(\n",
+    "    [[\"bob\", \"greg\"],\n",
+    "     [\"albert\", \"john\", \"ann\", \"fred\"],\n",
+    "     [\"sandra\", \"greg\", \"bill\"]], \"a\") == [[0, 2, 1], [2, 0, 1, 0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rock-Paper-Scissors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## ro_sham_bo(total_winning_throws)\n",
+    "## consumes a positive integer and returns None. \n",
+    "## The function runs a suite of Ro Sham Bo games that ends when\n",
+    "## a player reach a total total_winning_throws won games.\n",
+    "## Player record their choice one after the other by typing scissors,\n",
+    "## paper or rock when prompted by the function.\n",
+    "## After each throw, the function prints out the status of the game.\n",
+    "\n",
+    "\n",
+    "prompt = \"Player {0}'s hand: \"\n",
+    "score_message = \"Player 1: {0}, Player 2: {1}\"\n",
+    "tie_message = \"Tie!\"\n",
+    "win_message = \"Player {0} wins!\"\n",
+    "\n",
+    "def winning_hand(hand1, hand2):\n",
+    "  if hand1 == hand2:\n",
+    "    return \"tie\"\n",
+    "  elif hand1 == \"paper\":\n",
+    "    if hand2 == \"scissors\":\n",
+    "      return \"p2\"\n",
+    "    elif hand2 == \"rock\":\n",
+    "      return \"p1\"\n",
+    "  elif hand1 == \"scissors\":\n",
+    "    if hand2 == \"paper\":\n",
+    "      return \"p1\"\n",
+    "    if hand2 == \"rock\":\n",
+    "      return \"p2\"\n",
+    "  elif hand1 == \"rock\":\n",
+    "    if hand2 == \"paper\":\n",
+    "      return \"p2\"\n",
+    "    if hand2 == \"scissors\":\n",
+    "      return \"p1\"\n",
+    "\n",
+    "def ro_sham_bo(total_winning_throws):\n",
+    "  p1_score = 0\n",
+    "  p2_score = 0\n",
+    "  \n",
+    "  while p1_score < total_winning_throws and p2_score < total_winning_throws:\n",
+    "    p1_hand = input(prompt.format(1))\n",
+    "    p2_hand = input(prompt.format(2))\n",
+    "    \n",
+    "    winner = winning_hand(p1_hand, p2_hand)\n",
+    "    if winner == \"p1\":\n",
+    "      p1_score += 1\n",
+    "      print(score_message.format(p1_score, p2_score))\n",
+    "    elif winner == \"tie\":\n",
+    "      print(tie_message)\n",
+    "    else:\n",
+    "      p2_score += 1\n",
+    "      print(score_message.format(p1_score, p2_score))\n",
+    "  \n",
+    "  if p1_score > p2_score:\n",
+    "    print(win_message.format(1))\n",
+    "  else:\n",
+    "    print(win_message.format(2))\n",
+    "\n",
+    "## Example:\n",
+    "\n",
+    "## ro_sham_bo(2)=>None\n",
+    "## and the follow is output with input in bold:\n",
+    "\n",
+    "## Player 1's hand: paper\n",
+    "## Player 2's hand: scissors\n",
+    "## Player 1: 0, Player 2: 1\n",
+    "## Player 1's hand: scissors\n",
+    "## Player 2's hand: scissors\n",
+    "## Tie!\n",
+    "## Player 1's hand: rock\n",
+    "## Player 2's hand: scissors\n",
+    "## Player 1: 1, Player 2: 1\n",
+    "## Player 1's hand: rock\n",
+    "## Player 2's hand: paper\n",
+    "## Player 2 wins!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### File manipulation"
    ]
   },
@@ -1184,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1192,18 +1377,10 @@
      "output_type": "stream",
      "text": [
       "Copying from demofile.txt to demofile2.txt\n",
-      "The input file is 12 bytes long\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'exists' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\skyfree\\Documents\\GitHubClones\\Python_Practice\\Beginning_Python.ipynb Cell 48\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#Y102sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m indata \u001b[39m=\u001b[39m in_file\u001b[39m.\u001b[39mread()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#Y102sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe input file is \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(indata)\u001b[39m}\u001b[39;00m\u001b[39m bytes long\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#Y102sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mDoes the output file exist? \u001b[39m\u001b[39m{\u001b[39;00mexists(to_file)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#Y102sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mReady, hit RETURN to continue, CTRL C to abort.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#Y102sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39minput\u001b[39m()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'exists' is not defined"
+      "The input file is 12 bytes long\n",
+      "Does the output file exist? False\n",
+      "Ready, hit RETURN to continue, CTRL C to abort.\n",
+      "Alright, all done.\n"
      ]
     }
    ],
