--- a/Python_The_early_days_of_learning.ipynb
+++ b/Python_The_early_days_of_learning.ipynb
@@ -759,6 +759,52 @@
     "       [\"1\", \"X\", \"X\", \"2\", \"\"], \\\n",
     "       [\"1\", \"3\", \"X\", \"2\", \"\"]]  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Splitting Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## split_list(source, partition_size)\n",
+    "## consumes a list of integers source and \n",
+    "## a positive integer partition_size, and\n",
+    "## returns a list of lists of integers containing all elements of source \n",
+    "## split amongst lists of partition_size elements \n",
+    "## (except the last one that might be smaller).\n",
+    "\n",
+    "def split_list(source, partition_size):\n",
+    "  if source == []:\n",
+    "    return []\n",
+    "  \n",
+    "  source_length = len(source)\n",
+    "  number_of_partitions = source_length // partition_size\n",
+    "  \n",
+    "  retlst = list(range(number_of_partitions))\n",
+    "  \n",
+    "  offset = partition_size\n",
+    "  \n",
+    "  for n in range(number_of_partitions):\n",
+    "    retlst[n] = source[n * offset : (n + 1) * offset]\n",
+    "  \n",
+    "  if not(source_length % partition_size == 0):\n",
+    "    retlst.append(source[(n + 1)* offset: ])\n",
+    "  \n",
+    "  return retlst\n",
+    "\n",
+    "\n",
+    "assert split_list([1, 2, 3, 4, 5, 6, 7, 8, 9], 4) \\\n",
+    "       == [[1, 2, 3, 4], [5, 6, 7, 8], [9]]\n",
+    "\n",
+    "assert split_list([], 1375) == []"
+   ]
   }
  ],
  "metadata": {
