Added more beginner codes

--- a/Beginning_Python.ipynb
+++ b/Beginning_Python.ipynb
@@ -427,6 +427,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def are_anagrams(s, t): # O(nlogn)\n",
+    "  \"\"\"are_anagrams(s, t)\n",
+    "    consumes two strings s and t and returns True\n",
+    "    if they are anagrams (they contain exactly the same characters, \n",
+    "    possibly in a different order, including multiplicities), \n",
+    "    False otherwise\"\"\"\n",
+    "\n",
+    "  n = len(s) # O(1)\n",
+    "  m = len(t) # O(1)\n",
+    "  \n",
+    "  if not(n == m): # O(1)\n",
+    "    return False # O(1)\n",
+    "  \n",
+    "  return sorted(s) == sorted(t) # O(nlogn)\n",
+    "\n",
+    "assert are_anagrams(\"finding anagrams\", \"marinading fangs\") == True\n",
+    "assert are_anagrams(\"finding anagrams\", \"different string\") == False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -626,21 +651,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\skyfree\\Documents\\GitHubClones\\Python_Practice\\Beginning_Python.ipynb Cell 28\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#X36sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#X36sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m source \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#X36sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m \u001b[39massert\u001b[39;00m intersect(source, [[\u001b[39m4\u001b[39m, \u001b[39m1\u001b[39m], [\u001b[39m6\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m4\u001b[39m], [\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m]]) \u001b[39m==\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/skyfree/Documents/GitHubClones/Python_Practice/Beginning_Python.ipynb#X36sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m \u001b[39massert\u001b[39;00m source \u001b[39m==\u001b[39m [\u001b[39m1\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m1\u001b[39m]\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def intersect_recur(L, M, lst):\n",
     "    \"\"\" \n",
@@ -698,6 +711,61 @@
     "source = [1, 4, 6, 2, 1]\n",
     "assert intersect_harder(source, [[4, 1], [6, 9, 1, 4], [0, 2, 2, 2, 4, 2, 1]]) == None\n",
     "assert source == [1, 4, 1]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Moving Averages\n",
+    "A very useful calculation in forecasting uses moving averages. The idea is to compute averages from a specified amount of contiguous data from the time series, and continue doing so as long as it makes sense. Moving averages often follow the swings of the data, but with a bit of a lag. Thus, it allows to predict upcoming shifts in trends for the time-series.\n",
+    "\n",
+    "Give a list L of time series data and a specified window size k, a list of moving average os calculated as follows:\n",
+    "- The first element is the average of the first k elements of L,\n",
+    "- the second element is the average of the first k elements starting from index 1, etc.\n",
+    "- In general, index i in the returned list will be the average of L[i, k + i]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def k_avg(L, k): #O(k)\n",
+    "  avg = 0 # O(1)\n",
+    "  for index in range(k): # iterates k times\n",
+    "    avg += L[index] # O(1)\n",
+    "  avg = avg / k # O(1)\n",
+    "  return avg # O(1)\n",
+    "\n",
+    "def moving_average(L, k): # O(n)\n",
+    "  \"\"\"  moving_average(L, k)\n",
+    "  consumes a list of natural numbers L and a positive integer k,\n",
+    "  and returns a list of len(L) - k + 1 floating point numbers. \n",
+    "  If k > len(L) the function returns an empty list.\n",
+    "  \"\"\"\n",
+    "  \n",
+    "  n = len(L) # O(1)\n",
+    "  if k > n: # O(1)\n",
+    "    return [] # O(1)\n",
+    "    \n",
+    "  retlst_len = n - k + 1 # O(1)\n",
+    "  retlst = [0] * retlst_len # O(n - k + 1) = O(n)\n",
+    "  \n",
+    "  next_avg = k_avg(L, k) # O(k)\n",
+    "  \n",
+    "  for pos in range(retlst_len - 1): # iterates n - k + 1 times\n",
+    "    retlst[pos] = next_avg # O(1)\n",
+    "    next_avg = (next_avg * k) - L[pos] + L[k + pos] # O(1)\n",
+    "    next_avg = next_avg / k # O(1)\n",
+    "  \n",
+    "  retlst[retlst_len - 1] = next_avg # O(1)\n",
+    "  \n",
+    "  return retlst # O(1)\n",
+    "\n",
+    "assert moving_average([20, 18, 13, 16, 25, 22, 9], 2) == \\\n",
+    "       [19.0, 15.5, 14.5, 20.5, 23.5, 15.5]"
    ]
   },
   {
@@ -1112,6 +1180,72 @@
     "assert is_valid_date(20200922) == True\n",
     "assert is_valid_date(30313) == True\n",
     "assert is_valid_date(17520912) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compressing Data\n",
+    "Highly repetitive data can sometimes be compressed using something called run-length encoding:\n",
+    "- It is shorter to write \"8o\" instead of \"oooooooo\".\n",
+    "- Each run is represented by a number n, \n",
+    "- followed by a single non-space character c.\n",
+    "- Each run is separated by a single space.\n",
+    "Here is an example of how a string may be encoded and decoded."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rl_decode(s):\n",
+    "  '''\n",
+    "  Decodes a Run Length encoded string s\n",
+    "  \n",
+    "  rl_decode: Str -> Str\n",
+    "  \n",
+    "  Examples:\n",
+    "     rl_decode(\"\") => \"\"\n",
+    "     rl_decode(\"6C 2A 4T\") => \"CCCCCCAATTTT\"\n",
+    "  '''\n",
+    "  ans = \"\"\n",
+    "  for t in s.split():\n",
+    "    ans +=  int(t[:-1]) * t[-1]\n",
+    "  return ans\n",
+    "\n",
+    "def rl_encode(s): # O(n)\n",
+    "  \"\"\" rl_encode(s) \n",
+    "  consumes a space-less string s, and returns its run length encoding.\n",
+    "  \"\"\"\n",
+    "  n = len(s)\n",
+    "  \n",
+    "  if n == 0:\n",
+    "    return \"\"\n",
+    "  \n",
+    "  prev_char = s[0]\n",
+    "  count = 1\n",
+    "  retstr = []\n",
+    "  \n",
+    "  for pos in range(1, n):\n",
+    "    if prev_char == s[pos]:\n",
+    "      count += 1\n",
+    "      if pos == n - 1:\n",
+    "        retstr.append(str(count))\n",
+    "        retstr.append(prev_char)      \n",
+    "    else:\n",
+    "      retstr.append(str(count))\n",
+    "      retstr.append(prev_char)\n",
+    "      retstr.append(\" \")\n",
+    "      prev_char = s[pos]\n",
+    "      count = 1\n",
+    "  \n",
+    "  return ''.join(retstr)\n",
+    "\n",
+    "assert rl_encode(\"CCCCCCAATTTT\") == \"6C 2A 4T\"\n",
+    "assert rl_encode(\"aa\") == \"2a\""
    ]
   },
   {
